--- a/src/app/index.html
+++ b/src/app/index.html
@@ -73,7 +73,7 @@
           <li class="dropdown">
             <a showtab="" style="padding:2px;" href="#" class="dropdown-toggle" data-toggle="dropdown">{{usersession.currentUser.username}}<span class="caret"></span></a>
             <ul style="font-size: 12px;" class="dropdown-menu" role="menu">
-              <li ng-show="(usersession.currentUser.isAdmin == true && usersession.currentUser.usertype == 'provider')"><a href="" ui-sref="oz.ozWall">Admin</a></li>
+              <li ng-if="(usersession.currentUser.isAdmin == true && usersession.currentUser.usertype == 'provider')"><a href="" ui-sref="oz.ozWall">Admin</a></li>
               <li><a href="" ui-sref="seller.view">Manage Seller</a></li>
               <li><a ng-show="selectedproviderid" href="" ui-sref="sellerbranch.view">Manage Branch</a></li>
               <li><a ng-show="selectedproviderid && selectedBranchId" href="" ui-sref="pickupaddress.view">Manage Pickup Address</a></li>
