--- a/src/app/ProviderWall/ManageDeliveryTime/views/oz.manage.deliverytime.tpl.html
+++ b/src/app/ProviderWall/ManageDeliveryTime/views/oz.manage.deliverytime.tpl.html
@@ -4,14 +4,16 @@
    <input type = 'text' class = 'form-control' ng-model = 'search' placeholder = 'Search products or categories from the list '>
 
 	<div  ng-repeat = 'list in contentOfAllProducts | filter : search' style = 'margin : 20px;border : 1px solid #ccc; border-radius : 5px;' ng-if = 'list.productleadtime.length > 0'>
-      <div>
+      <div style = 'min-height : 56px;height : auto'>
 		  <div style = 'width : 50%; float:left'> 
 		     	 <h5 style = 'font-size :17px '>Category Name : <span ng-bind = 'list.category.categoryname'></span>
 		         </h5>
 	      </div>
  
 	      <div style = 'width : 50%;float:right; padding : 5px;'>
-	      	Check to assign common lead time to all products from this category : <input type = 'checkbox' ng-click = 'showGlobalTextLead(list)' id = '{{list.category.categoryid}}'/>
+	        <div>
+	       	Check to assign common lead time to all products from this category : <input type = 'checkbox' ng-click = 'showGlobalTextLead(list)' id = '{{list.category.categoryid}}'/>
+	      	</div>
 	      	<div>
 					      	<input type = 'text' class = 'form-control' style = 'width : 20%;display : inline' ng-show = 'list.editing' ng-model = 'list.new.leadtime.value'>
 					      	<select class = 'form-control' style = 'width : 20%;  margin-left : 5px;display : inline' ng-show = 'list.editing' ng-model = 'list.new.leadtime.option'>
@@ -26,39 +28,37 @@
 	      </div>
       </div>
 
-          <div>
-              <div>
-					<table class = 'table table-hover'>
-					    <tr>
-					    	<th style = 'width : 30%'>Product Name</th>
-					    	<th style = 'width : 30%'>Delivery Lead Time</th>
-					    	<th style = 'width : 30%'>Action</th>
-					    </tr>
-					    <tr  ng-repeat = 'products in list.productleadtime'>
-					    	<td ng-bind = 'products.productname' ></td>
-					    	<td ng-hide = 'products.editing'><span ng-bind = 'products.leadtime.value'></span>&nbsp;<span ng-bind = 'products.leadtime.option'></span></td>
-					    	<td ng-show = 'products.editing'>
-							    	<input type = 'text' class = 'form-control' style = 'width : 20%; float: left' ng-model = 'products.leadtime.value'> 
-							    	&nbsp;&nbsp;
-							    	<select class = 'form-control' style = 'width : 20%; float : left; margin-left : 5px;' ng-model = 'products.leadtime.option'>
-							    					<option >minutes</option>
-							    					<option>hours</option>
-							    					<option>days</option>
-							    					<option>weeks</option>
-							    	</select>
-					    	</td>
-					    	
-					    	<td ng-hide = 'products.editing'>
-					    	<button class = 'btn btn-info' style = 'width : 15%;' ng-click = 'enableTheEditorFunction(products)'>Edit</button></td>
+      <div>
+				<table class = 'table table-hover'>
+				    <tr>
+				    	<th style = 'width : 30%'>Product Name</th>
+				    	<th style = 'width : 30%'>Delivery Lead Time</th>
+				    	<th style = 'width : 30%'>Action</th>
+				    </tr>
+				    <tr  ng-repeat = 'products in list.productleadtime'>
+				    	<td ng-bind = 'products.productname' ></td>
+				    	<td ng-hide = 'products.editing'><span ng-bind = 'products.leadtime.value'></span>&nbsp;<span ng-bind = 'products.leadtime.option'></span></td>
+				    	<td ng-show = 'products.editing'>
+						    	<input type = 'text' class = 'form-control' style = 'width : 20%; float: left' ng-model = 'products.leadtime.value'> 
+						    	&nbsp;&nbsp;
+						    	<select class = 'form-control' style = 'width : 20%; float : left; margin-left : 5px;' ng-model = 'products.leadtime.option'>
+						    					<option >minutes</option>
+						    					<option>hours</option>
+						    					<option>days</option>
+						    					<option>weeks</option>
+						    	</select>
+				    	</td>
+				    	
+				    	<td ng-hide = 'products.editing'>
+				    	<button class = 'btn btn-info' style = 'width : 15%;' ng-click = 'enableTheEditorFunction(products)'>Edit</button></td>
 
-					    	<td ng-show = 'products.editing'>
-					    	    <button class = 'btn btn-info' style = 'width : 15%;' ng-click = 'cancel(products)' style = 'float : left'>Cancel</button>
-					    	     <button class = 'btn btn-info' style = 'width : 15%;' ng-click = 'changeLeadTimes(products)' style = 'float : left'>Save</button>
-					    	</td>
-					    </tr>
-					</table>
-			   </div>		
-		  </div>	 		
+				    	<td ng-show = 'products.editing'>
+				    	    <button class = 'btn btn-info' style = 'width : 15%;' ng-click = 'cancel(products)' style = 'float : left'>Cancel</button>
+				    	     <button class = 'btn btn-info' style = 'width : 15%;' ng-click = 'changeLeadTimes(products)' style = 'float : left'>Save</button>
+				    	</td>
+				    </tr>
+				</table>
+	  </div>	 		
 	</div>
 	<div  ng-if = 'contentOfAllProducts.length === 0'>
            <div style="padding:40px; opacity: .8;margin-top: 2px;margin-bottom: 1px; color: rgb(80, 74, 74);background-color:#F1F1F1; letter-spacing: 1px; margin:10px;" class="row">
